# madmom-beats-port

./: .gitignore  .gitmodules  LICENSE  PROVENANCE.md  README.md
.github/workflows/: build-artifacts.yml  ci-build.yml
LICENSES/: THIRD_PARTY.md
docs/android/: jni-cmake-sample.md
docs/schemas/: analysis-output.v1.schema.json  config.v1.example.json  config.v1.schema.json
models/: downbeats_blstm.json  downbeats_blstm_weights.npz
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/madmom_beats_port_core/: Cargo.toml
rust/madmom_beats_port_core/src/: dbn.rs  features.rs  io.rs  lib.rs  model.rs
rust/madmom_beats_port_core/tests/: golden.rs
rust/madmom_beats_port_ffi/: Cargo.toml  README.md
rust/madmom_beats_port_ffi/examples/: example.c
rust/madmom_beats_port_ffi/include/: madmom_beats_port.h
rust/madmom_beats_port_ffi/src/: lib.rs
rust/madmom_beats_port_wasm/: Cargo.toml  README.md
rust/madmom_beats_port_wasm/src/: lib.rs
rust/rhythm_core/: Cargo.toml
rust/rhythm_core/src/: config.rs  dbn.rs  features.rs  io.rs  lib.rs  model.rs  types.rs
rust/rhythm_core/tests/: golden.rs
rust/rhythm_ffi/: Cargo.toml  README.md
rust/rhythm_ffi/examples/: example.c
rust/rhythm_ffi/include/: rhythm.h
rust/rhythm_ffi/src/: lib.rs
rust/rhythm_wasm/: Cargo.toml  README.md
rust/rhythm_wasm/src/: lib.rs
tools/: verify_16kb_android.sh
tools/regen/: README.md
tools/regen/patches/: madmom-submodule.patch
tools/regen/python/: export_downbeats_model.py  generate_golden.py
