[workspace]
resolver = "2"
members = [
  "rhythm_core",
  "rhythm_ffi",
  "rhythm_wasm",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
ndarray-npy = "0.8"
