[workspace]
resolver = "2"
members = [
  "madmom_beats_port_core",
  "madmom_beats_port_ffi",
  "madmom_beats_port_wasm",
]

[workspace.package]
version = "4.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
ndarray-npy = "0.8"
