[package]
name = "madmom_beats_port_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
madmom_beats_port_core = { path = "../madmom_beats_port_core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
