[package]
name = "madmom_beats_port_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
madmom_beats_port_core = { path = "../madmom_beats_port_core" }
